# tuporc

./: .gitignore  .gitmodules  Cargo.toml  README.md  dagexec.md  deny.toml  ptrace_nix5_traceread_recursive.txt
.tup/: db
tupcompat/: Cargo.toml
tupcompat/src/: lib.rs  platform.rs
tupdb/: Cargo.toml  build.rs  sqlite.ddl
tupdb-sql-macro/: Cargo.toml
tupdb-sql-macro/src/: lib.rs
tupdb/src/: db.rs  deletes.rs  error.rs  inserts.rs  lib.rs  queries.rs
tupdb/src/sql/: deletes.sql  dirpathbuf_indices.sql  dirpathbuf_temptable.sql  inserts.sql  node_table.sql  presentlisttemptable.sql  queries.sql  temptables.sql  tuppathbuf.sql
tupetw/: Cargo.toml
tupetw/examples/: traceproc.rs
tupetw/src/: lib.rs
tuporc/: Cargo.toml  build.rs  todo.md
tuporc/src/: db.rs  execute.rs  main.rs  monitor.rs  parse.rs  scan.rs
tuporc/src/sql/: dirpathbuf_temptable.sql  dynio.sql  node_table.sql  temptables.sql
tuppaths/: Cargo.toml
tuppaths/src/: descs.rs  errors.rs  glob.rs  intern.rs  lib.rs  paths.rs
tuptrace/: Cargo.toml  build.rs
tuptrace/src/: main.rs
