[package]
name = "tupetw"
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferrisetw = "1.1.0" # This is the only dependency you need to add
crossbeam-channel = "0.5.7"
dunce = "1.0.4"
log = "0.4.18"
thiserror = "1.0.30"

[dependencies.windows]
version = "0.48.0"
features = ["Win32_System_Threading", "Win32_Foundation"] # This is needed for the Windows Runtime
