[package]
name = "tupetw"
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"

[dependencies]
ferrisetw = "1.1.0" # This is the only dependency you need to add
crossbeam-channel = "0.5.11"
dunce = "1.0.4"
log = "0.4.20"
thiserror = "1.0.56"

[dependencies.windows]
version = "0.52.0"
features = ["Win32_System_Threading", "Win32_Foundation"] # This is needed for the Windows Runtime
