[package]
name = "tupetw"
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"

[dependencies]
ferrisetw = "1.2.0" # This is the only dependency you need to add
crossbeam-channel = "0.5.14"
dunce = "1.0.5"
log = "0.4.22"
thiserror = "2.0.7"

[[example]]
name = "log_trace"
path = "examples/traceproc.rs"

[dev-dependencies]
execute = "0.2.13"
env_logger = "0.11.5"
crossbeam = "0.8.4"
pathdiff = "0.2.3"


