[package]
name = "tuporc"
version = "0.1.0"
edition = "2021"
authors = ["Arun Sivaramakrishnan <arun.sivaramakrishnan@gmail.com>"]
license = "Apache 2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
incremental-topo = "0.2.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
tupparser = { path = "../tuprs" }
walkdir = "2.5.0"
eyre = "0.6.12"
bimap = "0.6.3"
crossbeam = "0.8.4"
env_logger = "0.11.5"
log = "0.4.22"
execute = "0.2.13"
parking_lot = "0.12.3"
pathdiff = "0.2.3"
ctrlc = "3.4.5"
num_cpus = "1.16.0"
tupetw = { path = "../tupetw" }
regex = "1.11.1"
indicatif = "0.17.9"
console = "0.15.8"
notify = { version = "7.0.0", features = ["crossbeam-channel"] }
lazy_static = { version = "1.5.0", features = [] }
fs2 = "0.4.3"
ignore = "0.4.23"

