[package]
name = "tuporc"
version = "0.1.0"
edition = "2021"
authors = ["Arun Sivaramakrishnan <arun.sivaramakrishnan@gmail.com>"]
license = "Apache 2.0"


[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
incremental-topo = "0.2.1"
# rusqlite = { version = "0.32.1", features = ["bundled"] }
tupparser = { path = "../tuprs" }
walkdir = "2.5.0"
eyre = "0.6.12"
bimap = "0.6.3"
crossbeam = "0.8.4"
env_logger = "0.11.6"
log = "0.4.25"
execute = "0.2.13"
parking_lot = "0.12.3"
pathdiff = "0.2.3"
ctrlc = "3.4.5"
num_cpus = "1.16.0"
tupetw = { path = "../tupetw" }
tupdb = { path = "../tupdb" }
regex = "1.11.1"
indicatif = "0.17.9"
console = "0.15.10"
notify = { version = "8.0.0", features = ["crossbeam-channel"] }
fs4 = {version = "0.12.0", features = ["sync"]}
ignore = "0.4.23"
rayon = "1.10.0"


[profile.release]
lto = true

[profile.release-with-debug]
inherits = "release"
debug = true
