[package]
name = "tuporc"
version = "0.1.0"
edition = "2021"
authors = ["Arun Sivaramakrishnan <arun.sivaramakrishnan@gmail.com>"]
license = "Apache 2.0"


[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
incremental-topo = "0.3.1"
# rusqlite = { version = "0.32.1", features = ["bundled"] }
tupparser = { path = "../tuprs" }
walkdir = "2.5.0"
eyre = "0.6.12"
bimap = "0.6.3"
crossbeam = "0.8.4"
env_logger = "0.11.8"
log = "0.4.29"
execute = "0.2.15"
parking_lot = "0.12.5"
pathdiff = "0.2.3"
ctrlc = "3.5.1"
num_cpus = "1.16.0"
tupetw = { path = "../tupetw" }
tupdb = { path = "../tupdb" }
regex = "1.12.2"
indicatif = "0.18.3"
console = "0.16.2"
notify = { version = "8.2.0", features = ["crossbeam-channel"] }
fs4 = {version = "0.13.1", features = ["sync"]}
ignore = "0.4.25"
rayon = "1.11.0"

[profile.release]
lto = true

[profile.release-with-debug]
inherits = "release"
debug = true

#[build-dependencies]
# (none)
